# YaCAD

./: CMakeLists.txt  README.md
src/: BasePropertyDialog.h  CMakeLists.txt  CustomScene.cpp  CustomScene.h  CustomView.cpp  CustomView.h  DialogPanel.cpp  DialogPanel.h  DotGraphicsItem.cpp  DotGraphicsItem.h  DrawingWidget.cpp  DrawingWidget.h  HotSpot.cpp  HotSpot.h  LineSegmentItem.cpp  LineSegmentItem.h  MouseGizmo.cpp  MouseGizmo.h  definitions.h  dialogDrawLineSegment.cpp  dialogDrawLineSegment.h  dialogDrawPoint.cpp  dialogDrawPoint.h  dialogTrackMouse.cpp  dialogTrackMouse.h  main.cpp
